--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -26,76 +26,37 @@
   font-style: normal;
 }
 
+:root {
+  --eventide-rp-system-c-dark: #191813;
+  --eventide-rp-system-c-faint: #c9c7b8;
+  --eventide-rp-system-c-beige: #b5b3a4;
+  --eventide-rp-system-c-tan: #444444;
+  --eventide-rp-system-c-white: #ffffff;
+  --eventide-rp-system-c-black: #000000;
+  --eventide-rp-system-c-groove: #eeede0;
+  --eventide-rp-system-character-input: rgba(white, 0.45);
+  --eventide-rp-system-character-input-border: rgba(black, 0.5);
+}
+
+.theme-dark {
+  --eventide-rp-system-c-dark: #c9c7b8;
+  --eventide-rp-system-c-faint: #191813;
+  --eventide-rp-system-c-beige: #444444;
+  --eventide-rp-system-c-tan: #b5b3a4;
+  --eventide-rp-system-c-white: #000000;
+  --eventide-rp-system-c-black: #ffffff;
+  --eventide-rp-system-c-groove: #11121f;
+  --eventide-rp-system-character-input: rgba(black, 0.45);
+  --eventide-rp-system-character-input-border: rgba(white, 0.5);
+}
+
 /* Global styles */
-.eventide-ability-row {
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 5px;
-  color: #fff;
-}
-
-.eventide-character-sheet {
-  background-image: linear-gradient(to bottom, rgba(68, 98, 131, 0.537254902), rgba(51, 72, 104, 0.462745098));
-  padding: 5px;
-  margin: -8px;
-  background-attachment: local;
-  height: 100%;
-  overflow: auto;
-}
-
-.eventide-character-sheet input {
-  background-color: rgba(0, 0, 0, 0.45);
-  color: #fff;
-  border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-.eventide-character-sheet input::selection {
-  background: rgba(139, 69, 19, 0.7019607843);
-  color: #fff;
-}
-
-.eventide-ability-row :hover:not(input) {
-  text-shadow: 1px 1px 1px 1px #fff, 5px 5px 5px 5px rgba(0, 123, 255, 0.7019607843), 10px 10px 10px 10px rgba(0, 123, 255, 0.7019607843);
-  color: #fff;
-}
-
-.eventide-ability-acro-box {
-  background-color: rgba(166, 59, 1, 0.7019607843);
-}
-
-.eventide-ability-phys-box {
-  background-color: rgba(145, 3, 3, 0.7019607843);
-}
-
-.eventide-ability-fort-box {
-  background-color: rgba(40, 88, 40, 0.7019607843);
-}
-
-.eventide-ability-will-box {
-  background-color: rgba(121, 8, 141, 0.7019607843);
-}
-
-.eventide-ability-wits-box {
-  background-color: rgba(14, 67, 128, 0.7019607843);
-}
-
 .window-app {
   font-family: "Roboto", sans-serif;
-  background: linear-gradient(to bottom, rgba(68, 98, 131, 0.537254902), rgba(51, 72, 104, 0.462745098));
-}
-
-.app {
-  background-image: linear-gradient(to bottom, rgba(0, 77, 159, 0.5411764706), rgba(0, 41, 112, 0.5411764706));
-}
-
-.window-content {
-  background: linear-gradient(to bottom, rgba(68, 98, 131, 0.537254902), rgba(51, 72, 104, 0.462745098));
-  padding: 0px;
 }
 
 .rollable:hover, .rollable:focus {
-  color: #000;
+  color: var(--eventide-rp-system-c-black);
   text-shadow: 0 0 10px red;
   cursor: pointer;
 }
@@ -293,6 +254,68 @@
   text-align: center;
 }
 
+.eventide-ability-row {
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  padding: 5px;
+  color: #ffffff;
+}
+
+.features {
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.features::-webkit-scrollbar {
+  display: none;
+}
+
+.eventide-character-sheet {
+  background-image: linear-gradient(to bottom, rgba(68, 98, 131, 0.537254902), rgba(51, 72, 104, 0.462745098));
+  padding: 5px;
+  margin: -8px;
+  background-attachment: local;
+  height: 100%;
+  overflow: auto;
+}
+
+.eventide-character-sheet input {
+  background-color: var(--eventide-rp-system-character-input);
+  color: var(--eventide-rp-system-c-white);
+  border-radius: 5px;
+  border: 1px solid var(--eventide-rp-system-character-input-border);
+}
+
+.eventide-character-sheet input::selection {
+  background: #000000;
+  color: #ffffff;
+}
+
+.eventide-ability-row :hover:not(input) {
+  text-shadow: 1px 1px 1px 1px #000000, 5px 5px 5px 5px rgba(0, 123, 255, 0.7019607843), 10px 10px 10px 10px rgba(0, 123, 255, 0.7019607843);
+  color: #ffffff;
+}
+
+.eventide-ability-acro-box {
+  background-color: rgba(166, 59, 1, 0.7019607843);
+}
+
+.eventide-ability-phys-box {
+  background-color: rgba(145, 3, 3, 0.7019607843);
+}
+
+.eventide-ability-fort-box {
+  background-color: rgba(40, 88, 40, 0.7019607843);
+}
+
+.eventide-ability-will-box {
+  background-color: rgba(121, 8, 141, 0.7019607843);
+}
+
+.eventide-ability-wits-box {
+  background-color: rgba(14, 67, 128, 0.7019607843);
+}
+
 .base-form, .restore-target, .damage-targets, .status-creator {
   overflow-y: auto;
   -ms-overflow-style: none;
@@ -302,7 +325,6 @@
   display: none;
 }
 .base-form__header, .status-creator__header {
-  color: #fff;
   text-align: center;
   text-decoration: underline;
   padding: 0.875rem;
@@ -315,7 +337,6 @@
   padding-bottom: 0px;
 }
 .base-form .form-group label, .restore-target .form-group label, .damage-targets .form-group label, .status-creator .form-group label {
-  color: #fff;
   font-size: 1rem;
   font-weight: bolder;
 }
@@ -328,10 +349,7 @@
 .restore-target .form-group textarea,
 .damage-targets .form-group textarea,
 .status-creator .form-group textarea {
-  background-color: rgba(0, 0, 0, 0.45);
-  color: #fff;
   border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 .base-form .form-group input:not([type=checkbox]), .restore-target .form-group input:not([type=checkbox]), .damage-targets .form-group input:not([type=checkbox]), .status-creator .form-group input:not([type=checkbox]),
 .base-form .form-group select,
@@ -339,9 +357,6 @@
 .damage-targets .form-group select,
 .status-creator .form-group select {
   height: 1.75rem;
-}
-.base-form .form-group input[type=checkbox]:checked, .restore-target .form-group input[type=checkbox]:checked, .damage-targets .form-group input[type=checkbox]:checked, .status-creator .form-group input[type=checkbox]:checked {
-  background-color: rgba(0, 0, 0, 0.45);
 }
 .base-form .form-group input[type=checkbox]:checked:after, .restore-target .form-group input[type=checkbox]:checked:after, .damage-targets .form-group input[type=checkbox]:checked:after, .status-creator .form-group input[type=checkbox]:checked:after {
   content: "✓";
@@ -355,22 +370,13 @@
   height: 20px !important;
   appearance: none;
   border-radius: 10%;
-  border: 1px solid rgba(255, 255, 255, 0.5);
   box-shadow: none;
   font-size: 1em;
-}
-.base-form .form-group input::selection, .restore-target .form-group input::selection, .damage-targets .form-group input::selection, .status-creator .form-group input::selection,
-.base-form .form-group textarea::selection,
-.restore-target .form-group textarea::selection,
-.damage-targets .form-group textarea::selection,
-.status-creator .form-group textarea::selection {
-  background: #fff;
-  color: #000;
 }
 
 /* Styles limited to eventide-rp-system sheets */
 .chat-card__header {
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   padding: 0.875rem;
   font-size: 1.125rem;
@@ -427,7 +433,7 @@
   background-color: rgba(203, 142, 0, 0.7019607843);
 }
 .chat-card__description {
-  color: #444;
+  color: #444444;
   text-align: justify;
   font-size: 0.9rem;
   padding: 0.01rem;
@@ -435,19 +441,19 @@
 .chat-card__description--header {
   text-align: justify;
   font-size: 1.2rem;
-  color: #444;
+  color: #444444;
 }
 .chat-card__description--header-center-underline {
   text-align: center;
   font-size: 1.2rem;
-  color: #444;
+  color: #444444;
   border-bottom: 1px solid rgba(139, 69, 19, 0.7019607843);
 }
 .chat-card__effects {
   text-align: justify;
   font-size: 0.7rem;
   padding: 0rem;
-  color: #444;
+  color: #444444;
 }
 .chat-card__effects--ac-check {
   border: 3px dashed #ff9194;
@@ -464,7 +470,7 @@
   padding-bottom: 0.2rem;
   margin-bottom: 3px;
   background-color: rgba(139, 69, 19, 0.7019607843);
-  color: #fff;
+  color: #ffffff;
 }
 .chat-card__effects--hit {
   background-color: rgba(80, 200, 119, 0.7019607843);
@@ -473,7 +479,7 @@
   padding: 0.0875rem;
   font-size: 0.7rem;
   margin-bottom: 0px;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
 }
 .chat-card__effects--miss {
   background-color: rgba(199, 0, 57, 0.7019607843);
@@ -482,11 +488,11 @@
   padding: 0.0875rem;
   font-size: 0.7rem;
   margin-bottom: 0px;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
 }
 .chat-card__effects--name {
   font-weight: bolder;
-  color: #000;
+  color: #000000;
   font-size: 0.75rem;
 }
 .chat-card__effects--row {
@@ -499,14 +505,14 @@
 .chat-card__effects--row div {
   padding-left: 3px;
   padding-right: 3px;
-  border-bottom: 1px dashed #444;
+  border-bottom: 1px dashed #444444;
 }
 .chat-card__effects--row div:first-child,
 .chat-card__effects--row div:last-child {
   font-weight: bold;
 }
 .chat-card__effects--row div:last-child {
-  border-left: 1px dashed #444;
+  border-left: 1px dashed #444444;
 }
 .chat-card__effects--row div:not(:first-child):not(:last-child) {
   font-style: italic;
@@ -520,7 +526,7 @@
   width: 13px;
   height: 13px;
   border: 0px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(var(--eventide-rp-system-c-black), 0.8);
 }
 .chat-card__hr {
   border: none;
@@ -529,7 +535,7 @@
 
 .restore-target {
   max-height: 600px;
-  color: black;
+  color: var(--eventide-rp-system-c-white);
 }
 .restore-target .form-group {
   margin: 0;
@@ -540,6 +546,8 @@
 }
 
 .eventide-rp-system {
+  @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Combo&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&display=swap");
 }
@@ -564,6 +572,28 @@
   font-weight: 400;
   font-style: normal;
 }
+.eventide-rp-system :root {
+  --eventide-rp-system-c-dark: #191813;
+  --eventide-rp-system-c-faint: #c9c7b8;
+  --eventide-rp-system-c-beige: #b5b3a4;
+  --eventide-rp-system-c-tan: #444444;
+  --eventide-rp-system-c-white: #ffffff;
+  --eventide-rp-system-c-black: #000000;
+  --eventide-rp-system-c-groove: #eeede0;
+  --eventide-rp-system-character-input: rgba(white, 0.45);
+  --eventide-rp-system-character-input-border: rgba(black, 0.5);
+}
+.eventide-rp-system .theme-dark {
+  --eventide-rp-system-c-dark: #c9c7b8;
+  --eventide-rp-system-c-faint: #191813;
+  --eventide-rp-system-c-beige: #444444;
+  --eventide-rp-system-c-tan: #b5b3a4;
+  --eventide-rp-system-c-white: #000000;
+  --eventide-rp-system-c-black: #ffffff;
+  --eventide-rp-system-c-groove: #11121f;
+  --eventide-rp-system-character-input: rgba(black, 0.45);
+  --eventide-rp-system-character-input-border: rgba(white, 0.5);
+}
 .eventide-rp-system .item-form {
   font-family: "Roboto", sans-serif;
 }
@@ -584,17 +614,6 @@
 .eventide-rp-system .sheet-header .header-fields {
   flex: 1;
 }
-.eventide-rp-system .sheet-header h1.charname {
-  height: 50px;
-  padding: 0px;
-  margin: 5px 0;
-  border-bottom: 0;
-}
-.eventide-rp-system .sheet-header h1.charname input {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
 .eventide-rp-system .sheet-tabs {
   flex: 0;
 }
@@ -603,8 +622,14 @@
 .eventide-rp-system .sheet-body .tab .editor {
   height: 100%;
 }
+.eventide-rp-system .tab.biography {
+  flex: 1;
+}
+.eventide-rp-system .tab.biography .editor {
+  height: 100%;
+}
 .eventide-rp-system .tox .tox-editor-container {
-  background: #fff;
+  background: var(--eventide-rp-system-c-white);
 }
 .eventide-rp-system .tox .tox-edit-area {
   padding: 0 8px;
@@ -612,13 +637,42 @@
 .eventide-rp-system .resource-label {
   font-weight: bold;
 }
+.eventide-rp-system .ability {
+  margin-bottom: 2px;
+}
+.eventide-rp-system .ability-score,
+.eventide-rp-system .ability-total {
+  flex: 0 0 44px;
+}
+.eventide-rp-system :root {
+  --eventide-rp-system-c-dark: #191813;
+  --eventide-rp-system-c-faint: #c9c7b8;
+  --eventide-rp-system-c-beige: #b5b3a4;
+  --eventide-rp-system-c-tan: #444444;
+  --eventide-rp-system-c-white: #ffffff;
+  --eventide-rp-system-c-black: #000000;
+  --eventide-rp-system-c-groove: #eeede0;
+  --eventide-rp-system-character-input: rgba(white, 0.45);
+  --eventide-rp-system-character-input-border: rgba(black, 0.5);
+}
+.eventide-rp-system .theme-dark {
+  --eventide-rp-system-c-dark: #c9c7b8;
+  --eventide-rp-system-c-faint: #191813;
+  --eventide-rp-system-c-beige: #444444;
+  --eventide-rp-system-c-tan: #b5b3a4;
+  --eventide-rp-system-c-white: #000000;
+  --eventide-rp-system-c-black: #ffffff;
+  --eventide-rp-system-c-groove: #11121f;
+  --eventide-rp-system-character-input: rgba(black, 0.45);
+  --eventide-rp-system-character-input-border: rgba(white, 0.5);
+}
 .eventide-rp-system .items-header {
   height: 28px;
   margin: 2px 0;
   padding: 0;
   align-items: center;
   background: rgba(0, 0, 0, 0.05);
-  border: 2px groove #eeede0;
+  border: 2px groove var(--eventide-rp-system-c-groove);
   font-weight: bold;
 }
 .eventide-rp-system .items-header > * {
@@ -637,7 +691,7 @@
   padding: 0;
   overflow-y: auto;
   scrollbar-width: thin;
-  color: #444;
+  color: var(--eventide-rp-system-c-tan);
 }
 .eventide-rp-system .items-list .item-list {
   list-style: none;
@@ -653,7 +707,8 @@
   align-items: center;
   display: flex;
 }
-.eventide-rp-system .items-list .item-name h3, .eventide-rp-system .items-list .item-name h4 {
+.eventide-rp-system .items-list .item-name h3,
+.eventide-rp-system .items-list .item-name h4 {
   margin: 0;
   white-space: nowrap;
   overflow-x: hidden;
@@ -671,13 +726,13 @@
 .eventide-rp-system .items-list .item {
   align-items: center;
   padding: 0 2px;
-  border-bottom: 1px solid #c9c7b8;
+  border-bottom: 1px solid var(--eventide-rp-system-c-faint);
 }
 .eventide-rp-system .items-list .item:last-child {
   border-bottom: none;
 }
 .eventide-rp-system .items-list .item .item-name {
-  color: #191813;
+  color: var(--eventide-rp-system-c-dark);
 }
 .eventide-rp-system .items-list .item .item-name .item-image {
   flex: 0 0 30px;
@@ -698,7 +753,7 @@
   padding: 0;
   align-items: center;
   background: rgba(0, 0, 0, 0.05);
-  border: 2px groove #eeede0;
+  border: 2px groove var(--eventide-rp-system-c-groove);
   font-weight: bold;
 }
 .eventide-rp-system .items-list .items-header > * {
@@ -710,6 +765,151 @@
   text-align: left;
 }
 .eventide-rp-system .item-formula {
+  flex: 0 0 200px;
+  padding: 0 8px;
+}
+.eventide-rp-system .protest-revolution-regular {
+  font-family: "Protest Revolution", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .combo-regular {
+  font-family: "Combo", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .underdog-regular {
+  font-family: "Underdog", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system .merienda-regular {
+  font-family: "Merienda", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.eventide-rp-system :root {
+  --eventide-rp-system-c-dark: #191813;
+  --eventide-rp-system-c-faint: #c9c7b8;
+  --eventide-rp-system-c-beige: #b5b3a4;
+  --eventide-rp-system-c-tan: #444444;
+  --eventide-rp-system-c-white: #ffffff;
+  --eventide-rp-system-c-black: #000000;
+  --eventide-rp-system-c-groove: #eeede0;
+  --eventide-rp-system-character-input: rgba(white, 0.45);
+  --eventide-rp-system-character-input-border: rgba(black, 0.5);
+}
+.eventide-rp-system .theme-dark {
+  --eventide-rp-system-c-dark: #c9c7b8;
+  --eventide-rp-system-c-faint: #191813;
+  --eventide-rp-system-c-beige: #444444;
+  --eventide-rp-system-c-tan: #b5b3a4;
+  --eventide-rp-system-c-white: #000000;
+  --eventide-rp-system-c-black: #ffffff;
+  --eventide-rp-system-c-groove: #11121f;
+  --eventide-rp-system-character-input: rgba(black, 0.45);
+  --eventide-rp-system-character-input-border: rgba(white, 0.5);
+}
+.eventide-rp-system .effects-header {
+  height: 28px;
+  margin: 2px 0;
+  padding: 0;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.05);
+  border: 2px groove var(--eventide-rp-system-c-groove);
+  font-weight: bold;
+}
+.eventide-rp-system .effects-header > * {
+  font-size: 14px;
+  text-align: center;
+}
+.eventide-rp-system .effects-header .effect-name {
+  font-weight: bold;
+  padding-left: 5px;
+  text-align: left;
+  display: flex;
+}
+.eventide-rp-system .effects-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  color: var(--eventide-rp-system-c-tan);
+}
+.eventide-rp-system .effects-list .effect-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.eventide-rp-system .effects-list .effect-name {
+  flex: 2;
+  margin: 0;
+  overflow: hidden;
+  font-size: 13px;
+  text-align: left;
+  align-items: center;
+  display: flex;
+}
+.eventide-rp-system .effects-list .effect-name h3,
+.eventide-rp-system .effects-list .effect-name h4 {
+  margin: 0;
+  white-space: nowrap;
+  overflow-x: hidden;
+}
+.eventide-rp-system .effects-list .effect-controls {
+  display: flex;
+  flex: 0 0 100px;
+  justify-content: flex-end;
+}
+.eventide-rp-system .effects-list .effect-controls a {
+  font-size: 12px;
+  text-align: center;
+  margin: 0 6px;
+}
+.eventide-rp-system .effects-list .effect {
+  align-items: center;
+  padding: 0 2px;
+  border-bottom: 1px solid var(--eventide-rp-system-c-faint);
+}
+.eventide-rp-system .effects-list .effect:last-child {
+  border-bottom: none;
+}
+.eventide-rp-system .effects-list .effect .effect-name {
+  color: var(--eventide-rp-system-c-dark);
+}
+.eventide-rp-system .effects-list .effect .effect-name .effect-image {
+  flex: 0 0 30px;
+  height: 30px;
+  background-size: 30px;
+  border: none;
+  margin-right: 5px;
+}
+.eventide-rp-system .effects-list .effect-prop {
+  text-align: center;
+  border-left: 1px solid #c9c7b8;
+  border-right: 1px solid #c9c7b8;
+  font-size: 12px;
+}
+.eventide-rp-system .effects-list .effects-header {
+  height: 28px;
+  margin: 2px 0;
+  padding: 0;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.05);
+  border: 2px groove var(--eventide-rp-system-c-groove);
+  font-weight: bold;
+}
+.eventide-rp-system .effects-list .effects-header > * {
+  font-size: 12px;
+  text-align: center;
+}
+.eventide-rp-system .effects-list .effects-header .effect-name {
+  padding-left: 5px;
+  text-align: left;
+}
+.eventide-rp-system .effect-formula {
   flex: 0 0 200px;
   padding: 0 8px;
 }
