--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,5 +1,5 @@
-@use "../utils/colors";
 @use "../utils/typography";
+@use "../utils/colors";
 
 .item-form {
   font-family: typography.$font-primary;
@@ -23,19 +23,6 @@
   .header-fields {
     flex: 1;
   }
-
-  h1.charname {
-    height: 50px;
-    padding: 0px;
-    margin: 5px 0;
-    border-bottom: 0;
-
-    input {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-    }
-  }
 }
 
 .sheet-tabs {
@@ -46,6 +33,14 @@
 .sheet-body .tab,
 .sheet-body .tab .editor {
   height: 100%;
+}
+
+.tab.biography {
+  flex: 1;
+
+  .editor {
+    height: 100%;
+  }
 }
 
 .tox {
