--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -10,10 +10,12 @@
   background: rgba(0, 0, 0, 0.05);
   border: variables.$border-groove;
   font-weight: bold;
-  > * {
+
+  >* {
     font-size: 14px;
     text-align: center;
   }
+
   .item-name {
     font-weight: bold;
     padding-left: 5px;
@@ -51,7 +53,9 @@
     text-align: left;
     align-items: center;
     display: flex;
-    h3, h4 {
+
+    h3,
+    h4 {
       margin: 0;
       white-space: nowrap;
       overflow-x: hidden;
@@ -63,6 +67,7 @@
     display: flex;
     flex: 0 0 100px;
     justify-content: flex-end;
+
     a {
       font-size: 12px;
       text-align: center;
@@ -75,9 +80,14 @@
     align-items: center;
     padding: 0 2px; // to align with the header border
     border-bottom: 1px solid colors.$c-faint;
-    &:last-child { border-bottom: none; }
+
+    &:last-child {
+      border-bottom: none;
+    }
+
     .item-name {
       color: colors.$c-dark;
+
       .item-image {
         flex: 0 0 30px;
         height: 30px;
@@ -104,10 +114,12 @@
     background: rgba(0, 0, 0, 0.05);
     border: variables.$border-groove;
     font-weight: bold;
-    > * {
+
+    >* {
       font-size: 12px;
       text-align: center;
     }
+
     .item-name {
       padding-left: 5px;
       text-align: left;
@@ -118,7 +130,7 @@
 
 // Example style for EventideRpSystem (can be removed if not needed).
 .item-formula {
-  
+
   flex: 0 0 200px;
   padding: 0 8px;
 }
