--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -23,7 +23,7 @@
             background-color: colors.$fort;
         }
 
-        &--willpower {
+        &--will {
             background-color: colors.$will;
         }
 
