--- a/templates/macros/status-creator.hbs
+++ b/templates/macros/status-creator.hbs
@@ -27,6 +27,8 @@
       <select id="{{this.toLowerCase}}-mode" name="{{this.toLowerCase}}-mode">
         <option value="add">Add</option>
         <option value="override">Override</option>
+        <option value="advantage">Advantage</option>
+        <option value="disadvantage">Disadvantage</option>
       </select>
     </div>
   {{/each}}
