--- a/templates/chat/status-message.hbs
+++ b/templates/chat/status-message.hbs
@@ -18,7 +18,15 @@
           <div class="align-left">{{keySplit this.key 2}}</div> 
           <div class="align-center">
             {{#ifCond this.mode "===" 5}}set to{{/ifCond}}
-            {{#ifCond this.mode "!==" 5}}add{{/ifCond}}
+            {{#ifCond this.mode "!==" 5}}
+              {{#ifCond (keySplit this.key 4) "===" "advantage"}}
+                adv
+              {{/ifCond}}
+              {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
+                dis
+              {{/ifCond}}
+                add
+            {{/ifCond}}
           </div>
           <div class="align-center">{{this.value}}</div>
         </div>
