Updated roll-message to get the actor name from the correct place.

--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -29,7 +29,7 @@
   {{/if}}
   {{#if description}}
     <div class="chat-card__description">
-      <div class="chat-card__description--header">{{item.actor.name}}. . . </div>
+      <div class="chat-card__description--header">{{actor.name}}. . . </div>
       {{description}} 
     </div>
   {{/if}}
