Implemented Advantage and Disadvantage change on the handlebars file.

--- a/templates/macros/increment-target-status.hbs
+++ b/templates/macros/increment-target-status.hbs
@@ -19,6 +19,14 @@
     <input type="number" id="overrideChange" name="overrideChange" value="0">
   </div>
   <div class="form-group">
+    <label for="advantageChange">Advantage Change:</label>
+    <input type="number" id="advantageChange" name="advantageChange" value="0">
+  </div>
+  <div class="form-group">
+    <label for="disadvantageChange">Disadvantage Change:</label>
+    <input type="number" id="disadvantageChange" name="disadvantageChange" value="0">
+  </div>
+  <div class="form-group">
     <button type="submit">Increment</button>
     <button type="button" data-action="close">Close</button>
   </div>
