--- a/templates/macros/increment-target-status.hbs
+++ b/templates/macros/increment-target-status.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="form-group">
     <label for="statusSelector">Status:</label>
-    <select id="statusSelector" name="statusSelector">
+    <select id="statusSelector" name="statusSelector" value="{{ifThen storedData.incrementTargetStatus_statusSelector storedData.incrementTargetStatus_statusSelector ""}}">
       {{#each statuses as |status|}}
         <option value="{{status.id}}">{{status.name}}</option>
       {{/each}}
@@ -12,19 +12,19 @@
   </div>
   <div class="form-group">
     <label for="addChange">Add Change:</label>
-    <input type="number" id="addChange" name="addChange" value="0">
+    <input type="number" id="addChange" name="addChange" value="{{ifThen storedData.incrementTargetStatus_addChange storedData.incrementTargetStatus_addChange "0"}}">
   </div>
   <div class="form-group">
     <label for="overrideChange">Override Change:</label>
-    <input type="number" id="overrideChange" name="overrideChange" value="0">
+    <input type="number" id="overrideChange" name="overrideChange" value="{{ifThen storedData.incrementTargetStatus_overrideChange storedData.incrementTargetStatus_overrideChange "0"}}">
   </div>
   <div class="form-group">
     <label for="advantageChange">Advantage Change:</label>
-    <input type="number" id="advantageChange" name="advantageChange" value="0">
+    <input type="number" id="advantageChange" name="advantageChange" value="{{ifThen storedData.incrementTargetStatus_advantageChange storedData.incrementTargetStatus_advantageChange "0"}}">
   </div>
   <div class="form-group">
     <label for="disadvantageChange">Disadvantage Change:</label>
-    <input type="number" id="disadvantageChange" name="disadvantageChange" value="0">
+    <input type="number" id="disadvantageChange" name="disadvantageChange" value="{{ifThen storedData.incrementTargetStatus_disadvantageChange storedData.incrementTargetStatus_disadvantageChange "0"}}">
   </div>
   <div class="form-group">
     <button type="submit">Increment</button>
