Corrected logic error in status-message that was causing malformed change list.

--- a/templates/chat/status-message.hbs
+++ b/templates/chat/status-message.hbs
@@ -25,7 +25,9 @@
               {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
                 dis
               {{/ifCond}}
+              {{#ifCond (keySplit this.key 3) "===" "change"}}
                 add
+              {{/ifCond}}
             {{/ifCond}}
           </div>
           <div class="align-center">{{this.value}}</div>
