--- a/templates/macros/increment-target-status.hbs
+++ b/templates/macros/increment-target-status.hbs
@@ -4,9 +4,9 @@
   </div>
   <div class="form-group">
     <label for="statusSelector">Status:</label>
-    <select id="statusSelector" name="statusSelector" value="{{ifThen storedData.incrementTargetStatus_statusSelector storedData.incrementTargetStatus_statusSelector ""}}">
+    <select id="statusSelector" name="statusSelector">
       {{#each statuses as |status|}}
-        <option value="{{status.id}}">{{status.name}}</option>
+        <option value="{{status.id}}" {{#ifCond status.id "===" ../storedData.incrementTargetStatus_statusSelector}}selected{{/ifCond}}>{{status.name}}</option>
       {{/each}}
     </select>
   </div>
