Added autofocus to all macro handlebar templates.

--- a/templates/macros/status-creator.hbs
+++ b/templates/macros/status-creator.hbs
@@ -1,7 +1,7 @@
 <div class="{{cssClass}}" autocomplete="off">
   <div class="form-group">
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" placeholder="Name">
+    <input autofocus type="text" id="name" name="name" placeholder="Name">
   </div>
   <div class="form-group">
     <label for="description">Description:</label>
