--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -2,7 +2,7 @@
     <p>This script is for creating a custom damage message and applying the damage to your targeted token.</p>
     <div class="form-group">
       <label for="label">Label:</label>
-      <input placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
+      <input autofocus placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
     </div>
     <div class="form-group">
       <label for="description">Description:</label>
