--- a/templates/macros/increment-target-status.hbs
+++ b/templates/macros/increment-target-status.hbs
@@ -12,7 +12,7 @@
   </div>
   <div class="form-group">
     <label for="addChange">Add Change:</label>
-    <input type="number" id="addChange" name="addChange" value="{{ifThen storedData.incrementTargetStatus_addChange storedData.incrementTargetStatus_addChange "0"}}">
+    <input autofocus type="number" id="addChange" name="addChange" value="{{ifThen storedData.incrementTargetStatus_addChange storedData.incrementTargetStatus_addChange "0"}}">
   </div>
   <div class="form-group">
     <label for="overrideChange">Override Change:</label>
