Ensured chat templates can display enriched text since their base editors can insert it.

--- a/templates/chat/delete-status-message.hbs
+++ b/templates/chat/delete-status-message.hbs
@@ -5,7 +5,7 @@
   <div class="chat-card__description">
     <div class="chat-card__description--header">{{item.actor.name}}. . . </div> 
     {{#if options.description}}
-      {{options.description}}
+      {{{options.description}}}
     {{else}}
       had a status effect removed
     {{/if}}
