--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -30,7 +30,7 @@
   {{#if description}}
     <div class="chat-card__description">
       <div class="chat-card__description--header">{{actor.name}}. . . </div>
-      {{description}} 
+      {{{description}}} 
     </div>
   {{/if}}
 </div>
