Implemented basic logic for criticals with more than one term and added a new class of critical: a stolen/saved crit/miss

--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -8,6 +8,12 @@
   {{#if critMiss}}
     <div class="chat-card__header chat-card__header--critical-miss">Critical Miss!</div>
   {{/if}}
+  {{#if stolenCrit}}
+    <div class="chat-card__header chat-card__header--stolen-crit">Stolen Critical!</div>
+  {{/if}}
+  {{#if savedMiss}}
+    <div class="chat-card__header chat-card__header--saved-miss">Saved Miss!</div>
+  {{/if}}
   {{#if acCheck}}
     <div class="chat-card__effects chat-card__effects--ac-check">
       <div class="chat-card__effects--title">AC Check</div>
