--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -64,6 +64,8 @@ $wits: #0e4380b3;
 
 $critical-hit: #261282b3;
 $critical-miss: #4e0101b3;
+$saved-miss: #4A777Ab3;
+$stolen-crit: #563C5Cb3;
 
 $item: #8B4513b3;
 $combat-power: #B8860Bb3;
