Achieved basic implementation of combat powers: will refine into full shape going forward.

--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -35,8 +35,8 @@
             background-color: colors.$item;
         }
 
-        &--combat-power {
-            background-color: colors.$combat-power;
+        &--combat-powers {
+            background-color: colors.$combat-powers;
         }
 
         &--dice-dc {
