--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -68,7 +68,7 @@ $saved-miss: #4A777Ab3;
 $stolen-crit: #563C5Cb3;
 
 $item: #8B4513b3;
-$combat-power: #B8860Bb3;
+$combat-powers: #B8860Bb3;
 $dc: #234B57b3;
 $unknown: #535353b3;
 $damage: #6A0404b3;
