Small formatting changes to fit better with the properties of combat powers and statuses in their current states.

--- a/templates/actor/statuses.hbs
+++ b/templates/actor/statuses.hbs
@@ -1,10 +1,10 @@
-{{! Gear Tab }}
+{{! Statuses Tab }}
 <section class='tab statuses {{tab.cssClass}}' data-group='primary' data-tab='statuses'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
       <div class='item-controls'>
-        {{#if @root.editable}}
+        {{#if @root.editable }}
           <a
             class='item-control item-create'
             title='{{localize "DOCUMENT.Create" type='Item'}}'
