Updated status-creator to have a more consistent image selector based on the ones in actor and item sheets.

--- a/src/scss/components/_status-creator.scss
+++ b/src/scss/components/_status-creator.scss
@@ -6,4 +6,13 @@
   &__header {
     @extend .base-form__header;
   }
+
+  .profile-img {
+    flex: 0 0 100px;
+    height: 100px;
+    margin-right: 10px;
+    object-fit: contain;
+    border: none;
+    cursor: pointer;
+  }
 }
