--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -46,9 +46,17 @@
       </div>
     {{/if}}
     {{#if (eq item.type 'combatPower')}}
-      <div class="resource">
-        <label class="resource-label">{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</label>
-        <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+      <div class="grid grid-2col">
+        <div class="resource">
+          <label class="resource-label">{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.cost.label'}}</label>
+          <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+        </div>
+        <div class="resource checkbox-resource">
+          <label class="resource-label align-right">{{localize 'EVENTIDE_RP_SYSTEM.Item.CombatPower.FIELDS.targeted.label'}}</label>
+          <div class="checkbox-wrapper align-right">
+            <input type="checkbox" class="large-checkbox" name="system.targeted" {{checked system.targeted}} />
+          </div>
+        </div>
       </div>
     {{/if}}
   </div>
