--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -22,6 +22,64 @@
 
   .header-fields {
     flex: 1;
+
+    .checkbox-resource {
+      display: flex;
+      flex-direction: column;
+
+      .resource-label {
+        margin-bottom: 4px;
+        width: 100%;
+      }
+    }
+
+    .checkbox-wrapper {
+      height: 28px;
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+
+      .large-checkbox {
+        appearance: none;
+        -webkit-appearance: none;
+        width: 28px !important;
+        height: 28px !important;
+        min-width: 28px !important;
+        min-height: 28px !important;
+        max-width: 28px !important;
+        max-height: 28px !important;
+        margin: 0;
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.6) !important;
+        border: none;
+        border-radius: 4px;
+        position: relative;
+        box-shadow: 
+          0 0 0 1px rgba(0, 0, 0, 0.8),
+          inset 0 1px 3px rgba(0, 0, 0, 0.6);
+
+        &:checked {
+          &:after {
+            content: '✓';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 20px;
+            font-weight: bold;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+          }
+        }
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.7) !important;
+          box-shadow: 
+            0 0 0 1px rgba(255, 255, 255, 0.1),
+            inset 0 1px 3px rgba(0, 0, 0, 0.7);
+        }
+      }
+    }
   }
 }
 
