--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -50,6 +50,9 @@
       text-align: center;
       display: table-cell;
       vertical-align: middle;
+      width: 20px;
+      height: 20px;
+      cursor: pointer !important;
       appearance: none;
       border-radius: 10%;
       box-shadow: none;
