--- a/templates/macros/restore-target.hbs
+++ b/templates/macros/restore-target.hbs
@@ -1,11 +1,11 @@
 <div class="{{cssClass}}" autocomplete="off">
   <div class="form-group">
     <label for="restoreResolve"><strong>Restore Resolve:</strong></label>
-    <input autofocus type="checkbox" id="restoreResolve" name="restoreResolve" checked="{{defaultOptions.restoreResolve}}">
+    <input autofocus type="checkbox" id="restoreResolve" name="restoreResolve" {{checked defaultOptions.restoreResolve}}>
   </div>
   <div class="form-group">
     <label for="restorePower"><strong>Restore Power:</strong></label>
-    <input type="checkbox" id="restorePower" name="restorePower" checked="{{defaultOptions.restorePower}}">
+    <input type="checkbox" id="restorePower" name="restorePower" {{checked defaultOptions.restorePower}}>
   </div>
   <hr />
   <div class="form-group">
