Fixed some previously uncaught issues with the status creator.

--- a/templates/macros/status-creator.hbs
+++ b/templates/macros/status-creator.hbs
@@ -11,6 +11,7 @@
     <label for="img">Image:</label>
     <img
       class="profile-img"
+      id="img"
       src="{{ifThen storedData.status_img storedData.status_img "icons/svg/stoned.svg"}}"
       data-edit="img"
       data-action='onEditImage'
