--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -613,38 +613,23 @@
 .eventide-rp-system .item-form {
   font-family: "Roboto", sans-serif;
 }
-.eventide-rp-system .sheet-header {
-  flex: 0 auto;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin-bottom: 10px;
-}
-.eventide-rp-system .sheet-header .profile-img {
-  flex: 0 0 100px;
-  height: 100px;
-  margin-right: 10px;
-}
-.eventide-rp-system .sheet-header .header-fields {
-  flex: 1;
-}
-.eventide-rp-system .sheet-header .header-fields .checkbox-resource {
+.eventide-rp-system .checkbox-resource {
   display: flex;
   flex-direction: column;
 }
-.eventide-rp-system .sheet-header .header-fields .checkbox-resource .resource-label {
+.eventide-rp-system .checkbox-resource .resource-label {
   margin-bottom: 4px;
   width: 100%;
 }
-.eventide-rp-system .sheet-header .header-fields .checkbox-wrapper {
+.eventide-rp-system .checkbox-wrapper {
   height: 28px;
   display: flex;
-  justify-content: flex-end;
   width: 100%;
 }
-.eventide-rp-system .sheet-header .header-fields .checkbox-wrapper .large-checkbox {
+.eventide-rp-system .checkbox-wrapper.align-right {
+  justify-content: flex-end;
+}
+.eventide-rp-system .checkbox-wrapper .large-checkbox {
   appearance: none;
   -webkit-appearance: none;
   width: 28px !important;
@@ -661,7 +646,7 @@
   position: relative;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8), inset 0 1px 3px rgba(0, 0, 0, 0.6);
 }
-.eventide-rp-system .sheet-header .header-fields .checkbox-wrapper .large-checkbox:checked:after {
+.eventide-rp-system .checkbox-wrapper .large-checkbox:checked:after {
   content: "✓";
   position: absolute;
   top: 50%;
@@ -672,9 +657,26 @@
   font-weight: bold;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
-.eventide-rp-system .sheet-header .header-fields .checkbox-wrapper .large-checkbox:hover {
+.eventide-rp-system .checkbox-wrapper .large-checkbox:hover {
   background-color: rgba(0, 0, 0, 0.7) !important;
   box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.1), inset 0 1px 3px rgba(0, 0, 0, 0.7);
+}
+.eventide-rp-system .sheet-header {
+  flex: 0 auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+}
+.eventide-rp-system .sheet-header .profile-img {
+  flex: 0 0 100px;
+  height: 100px;
+  margin-right: 10px;
+}
+.eventide-rp-system .sheet-header .header-fields {
+  flex: 1;
 }
 .eventide-rp-system .sheet-tabs {
   flex: 0;
